Issue #2489660 by katzilla, lucur, AlviMurtaza, swati_qa, ijf8090, dawehner, Cottser, ayang: Views UI text overlap in older versions of Firefox
(cherry picked from commit f9595403630a5e03b7868b35dbea04cf4075776f)

--- a/core/themes/seven/css/components/form.css
+++ b/core/themes/seven/css/components/form.css
@@ -199,6 +199,7 @@ textarea.form-textarea {
   width: auto;
 }
 
+.form-item-options-group-info-identifier,
 .form-item-pass .description {
   clear: both;
 }
